Changed image on fixtures page, resized carousel section to get rid of white space at bottom of image when viewed on ipad

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,7 +22,7 @@ body {
 
 .bgimage {
 	width: 100%;
-	height: 700px;
+	height: 730px;
 	background: url("../images/lumley_homepage.jpg");
 	background-repeat: no-repeat;
 	background-position: center top;
@@ -74,6 +74,7 @@ body {
 .achievements {
     background-color: #343a40;
     color: #D93A2B;
+    height: 730px;
 }
 
 .achievements-text-top {
@@ -96,12 +97,12 @@ body {
 /*----------------------------Carousel*/
 
 .lumley-carousel {
-    height: 700px;
+    height: 730px;
     padding: 0;
 }
 
 .carousel-image {
-    height: 700px;
+    height: 730px;
 }
 
 /*----------------------------Footer*/
@@ -151,7 +152,7 @@ width: 0.7em;
 
 .team-image {
 	width: 100%;
-	height: 700px;
+	height: 730px;
 	background: url("../images/lumley_teampage.jpg");
 	background-repeat: no-repeat;
 	background-position: center top;
@@ -190,7 +191,7 @@ a:hover {
 
 .fixtures-image {
 	width: 100%;
-	height: 700px;
+	height: 730px;
 	background: url("../images/lumley_fixturespage.jpg");
 	background-repeat: no-repeat;
 	background-position: center top;
